--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="scss/index.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   </head>
   <body>
     <!-- Code Here -->
@@ -43,7 +44,6 @@
         <div class="statesDisplay">
           <!-- script.js adding li w/ class list-group-items -->
         </div>
-      </section>
     </div>
 
     <!-- Scripts -->
